samples/_failures_safe/1761375312_be3b3c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_10fec406.c:189:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  189 | void freeGraph
      | ^~~~
